# Project_2

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.bat  build.sh  rustfmt.toml
.github/workflows/: build_ubuntu.yml  build_windows.yml  check_fmt.yml  doc_tests.yml  linter.yml  rust.yml  tests.yml
anim/: Cargo.toml
anim/schema/: anim.json  animator.json
anim/schema/defines/: rect.json
anim/src/: anim.rs  lib.rs
builder/: Cargo.toml
builder/src/: config.rs  lib.rs
builder/src/config/: mod.rs  value.rs
builder/tests/: config.json  config.rs  include.yml
cfg_schemas/: shema_gui_cfg.json
gui/: Cargo.toml  gui.json
gui/examples/: gui_cfg.json  gui_demo.json  gui_demo.rs
gui/schema/: base.json  button.json  flag.json  graph.json  label.json  main.json  panel.json  slider.json  textbox.json
gui/schema/defines/: color.json  include_str.json  rect.json  vec2.json
gui/src/: lib.rs  main.rs  vec.rs
gui/src/manager/: input_event.rs  manager.rs  mod.rs  state.rs
gui/src/manager/widget/: base.rs  base_widget.rs  builder.rs  event.rs  mod.rs  widget.rs  widget_ref.rs  wref.rs
gui/src/renderer/: color.rs  mod.rs  rect.rs  renderer.rs  vec2.rs
gui/src/resources/: mod.rs
gui/src/widget/: base.rs  base_widget.rs  button.rs  flag.rs  graph.rs  label.rs  mod.rs  panel.rs  slider.rs  textbox.rs  widget.rs
hello/src/: main.rs
include/: debug-drawer.hpp  logger.hpp  resources.hpp  settings.hpp  util.hpp
include/gui/: gui-base.hpp  gui-button.hpp  gui-manager.hpp  gui-panel.hpp  gui-slider.hpp  gui-textbox.hpp
include/lan/: lan-channel.hpp  lan-client.hpp  lan-manager.hpp  lan-object.hpp  lan-packet.hpp  lan-recv-channel.hpp  lan-server.hpp
include/scene/: scene-base.hpp  scene-debug.hpp  scene-manager.hpp  scene-options.hpp  scene-test-server.hpp
project_2/: Cargo.toml
project_2/assets/: level.json  main_menu.json  main_menu_gui.json
project_2/src/: main.rs
project_2/src/scenes/: level.rs  main_menu.rs  mod.rs
renderer/: Cargo.toml
renderer/src/: color.rs  lib.rs  rect.rs  vec2.rs
resources/: Cargo.toml  cfg.json  debug_scene_cfg.json  gui_cfg_main.json  test_server_scene.json
resources/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: gui_cfg.json  lib.rs  renderer.rs  resmgr.rs
scene/: Cargo.toml
scene/src/: builder.rs  event.rs  lib.rs
scene/src/runtime/: mod.rs
src/: debug-drawer.cpp  main.cpp  resources.cpp  settings.cpp  util.cpp
src/gui/: gui-base.cpp  gui-button.cpp  gui-manager.cpp  gui-panel.cpp  gui-slider.cpp  gui-textbox.cpp
src/lan/: lan-channel.cpp  lan-client.cpp  lan-manager.cpp  lan-object.cpp  lan-packet.cpp  lan-recv-channel.cpp  lan-server.cpp
src/scene/: scene-base.cpp  scene-debug.cpp  scene-manager.cpp  scene-options.cpp  scene-test-server.cpp
tree/src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: color.rs  lib.rs  rect.rs  vec2.rs
