[workspace]
resolver = "2"
members = [
    "builder",
    "gui",
    "project_2",
    "renderer",
    "resources",
    "runtime",
    "scene",
    "utils",
]

[workspace.dependencies]
builder = { path = "./builder" }
utils = { path = "./utils" }
gui = { path = "./gui" }
runtime = { path = "./runtime" }
renderer = { path = "./renderer" }
resources = { path = "./resources" }
scene = { path = "./scene" }
error-stack = "0.5.0"
thiserror = "2.0.4"
