[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
builder = { workspace = true }
scene = { workspace = true }
renderer = { workspace = true }
resources = { workspace = true }
utils = { workspace = true }
error-stack = { workspace = true }
thiserror = { workspace = true }
delegate = "0.13.2"

[dev-dependencies]
runtime = { workspace = true }
