[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
resources = { workspace = true }
renderer = { workspace = true }
scene = { workspace = true }
builder = { workspace = true }
error-stack = { workspace = true }
thiserror = { workspace = true }
gui = { workspace = true }

piston = "1.0.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.84.0"
